fix: prevent logo text wrapping on mobiles

--- a/src/styles/layout/header.sass
+++ b/src/styles/layout/header.sass
@@ -34,6 +34,7 @@ $header__color: #333
 		flex-direction: column
 		line-height: 1
 		gap: 4px
+		white-space: nowrap
 	
 	&__name
 		font-size: $font-size-lg
